--- a/.github/workflows/cron-weekly.yml
+++ b/.github/workflows/cron-weekly.yml
@@ -1,10 +1,8 @@
 name: Markdown Links Check
 # runs every monday at 9 am
 on:
-  push:
-  # TODO: Change from push to schedule once the testing is done
-  # schedule:
-  #   - cron: "0 9 * * 1"
+  schedule:
+    - cron: "0 9 * * 1"
 
 jobs:
   check-links:
